try to add user rpc
