# n0core/pkg/api/iam/user/template_api.go
@@ -1,0 +1,51 @@
+// Code generated by "template_api"; DO NOT EDIT.
+
+package userapi
+
+import (
+	"context"
+	"github.com/golang/protobuf/proto"
+	"github.com/n0stack/n0stack/n0core/pkg/datastore"
+	grpcutil "github.com/n0stack/n0stack/n0core/pkg/util/grpc"
+	piam "github.com/n0stack/n0stack/n0proto.go/iam/v0"
+	"google.golang.org/grpc/codes"
+)
+
+func ListUsers(ctx context.Context, req *piam.ListUsersRequest, ds datastore.Datastore) (*piam.ListUsersResponse, error) {
+	res := &piam.ListUsersResponse{}
+	f := func(s int) []proto.Message {
+		res.Users = make([]*piam.User, s)
+		for i := range res.Users {
+			res.Users[i] = &piam.User{}
+		}
+
+		m := make([]proto.Message, s)
+		for i, v := range res.Users {
+			m[i] = v
+		}
+
+		return m
+	}
+
+	if err := ds.List(f); err != nil {
+		return nil, grpcutil.WrapGrpcErrorf(codes.Internal, "Failed to list from db, please retry or contact for the administrator of this cluster")
+	}
+	if len(res.Users) == 0 {
+		return nil, grpcutil.WrapGrpcErrorf(codes.NotFound, "")
+	}
+
+	return res, nil
+}
+
+func GetUser(ctx context.Context, req *piam.GetUserRequest, ds datastore.Datastore) (*piam.User, error) {
+	resourse := &piam.User{}
+	if err := ds.Get(req.Name, resourse); err != nil {
+		if datastore.IsNotFound(err) {
+			return nil, grpcutil.WrapGrpcErrorf(codes.NotFound, err.Error())
+		}
+
+		return nil, grpcutil.WrapGrpcErrorf(codes.Internal, datastore.DefaultErrorMessage(err))
+	}
+
+	return resourse, nil
+}
